Fix issue with tables not showing

--- a/src/_sass/_mobile.scss
+++ b/src/_sass/_mobile.scss
@@ -27,7 +27,7 @@
     }
 
     table {
-      display: none;
+      overflow-x: scroll;
     }
 
     .mobile-home {
